fix backdrop blur flickering

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -91,26 +91,40 @@ body {
 
     & > #page-header {
         width: 100%;
-        display: flex;
-        align-items: center;
-
         position: sticky;
         top: 0;
 
-        padding: 1rem 1.5rem;
-        gap: 0.5rem;
+        display: flex;
+        align-items: center;
         justify-content: space-between;
 
-        background-color: color-mix(in srgb, var(--bg-color) 60%, transparent);
-        backdrop-filter: blur(16px);
+        padding: 1.75rem 1.5rem;
+        gap: 0.5rem;
+        overflow: hidden;
+
         border-bottom: 1px solid var(--border-color);
         box-sizing: border-box;
+
+        &::before {
+            content: "";
+            position: absolute;
+
+            left: 0;
+            right: 0;
+            top: -16px;
+            bottom: -16px;
+            z-index: -1;
+
+            background-color: color-mix(in srgb, var(--bg-color) 60%, transparent);
+            backdrop-filter: blur(16px);
+        }
     }
 
     & > #page {
         width: min(800px, 100%);
 
         padding: 2rem 1.5rem;
+        padding-bottom: 6rem;
         margin-inline: auto;
     }
 }
